# gdb-visualizer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: PHASE2C_PLAN.md
examples/: sample_schema.json
gdbviz/: __init__.py  cli.py  exporter.py  models.py  schema_report.py
gdbviz/extractor/: __init__.py  arcpy_extractor.py  ogr_extractor.py
static/: visualization.html
tests/: __init__.py  test_exporters.py  test_models.py  test_schema_report.py
